# OptionsAndFuturesCalculator

./: .gitignore  .gitmodules  CLAUDE.md
backend/: CMakeLists.txt
backend/proto/: calculator.proto
backend/python_bindings/: pyproject.toml
backend/python_bindings/src/: app.py
backend/src/: bindings.cpp  main.cpp  test_main.cpp
backend/src/modules/: calculator_service.cppm  market_data.cppm  pricing_engine.cppm  testing_framework.cppm
backend/tests/: test_calculator_service.cpp
config/: cpp_details.txt  update_policy.txt
config/agents/: code_policy_agent.yaml  code_review_agent.yaml  code_update_agent.yaml
docs/: PRD_OPTIONS_AND_FUTURES_CALCULATOR.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DashboardLayout.css  DashboardLayout.tsx  OptionChainTable.css  OptionChainTable.tsx  PnLHeatmap.tsx  RiskMetricsPanel.css  RiskMetricsPanel.tsx  Sidebar.css  Sidebar.tsx  StrategySelector.css  StrategySelector.tsx
frontend/src/store/: useCalculatorStore.ts
proto/: calculator.proto
scripts/: code_policy_check.sh  code_review_adversarial.sh  code_update_sync.sh
supabase/: config.toml
supabase/functions/lead-attribution/: index.ts
supabase/functions/stripe-webhook/: index.ts
supabase/migrations/: 20260723000000_initial_schema.sql
